# isc_ws

./: .env.example  .gitignore  README.md  requirements.txt
db/: schema.sql
src/: README.md  config.yaml
src/csv_loader/: itemDict_to_mysql.py
src/isc_main_logic/: main.py  main_logic.py  settings.py
src/isc_main_logic/helpers/logic/: robot_2d_packing_logic.py  robot_3d_packing_logic.py
src/isc_main_logic/helpers/routing/: compute_merchant_distances.py  routing_utils.py
src/isc_subscriber/: package.xml  setup.cfg  setup.py
src/isc_subscriber/src/isc_subscriber/: summary_subscriber_node.py
src/isc_task_optimizer/: README.md  package.xml  settings.py  setup.cfg  setup.py
src/isc_task_optimizer/src/isc_optimizer/optimizer/: optimizer_node.py
src/isc_task_optimizer/src/isc_task_optimizer/: optimizer_node.py  optimizer_node_settings.py
src/isc_task_optimizer/src/isc_task_optimizer/optimizer_logic/: main_logic.py  main_logic_settings.py
src/isc_task_optimizer/src/isc_task_optimizer/optimizer_logic/helpers/: csv_utils.py  dates_utils.py  utils.py
src/isc_task_optimizer/src/isc_task_optimizer/optimizer_logic/helpers/logic/: robot_2d_packing_logic.py  robot_3d_packing_logic.py  robot_assignment_logic.py
src/isc_task_optimizer/src/isc_task_optimizer/optimizer_logic/helpers/routing/: compute_merchant_distances.py
src/isc_task_optimizer/src/isc_task_optimizer/optimizer_logic/helpers/routing/maps/: airport_edges.json  airport_zones.json
tools/mysql_loader/: itemDict_to_mysql.py  orderData_to_mysql.py
(+1 files in other folders)
