<?xml version="1.0"?>
<package format="3">
  <name>isc_task_optimizer</name>
  <version>0.1.0</version>
  <description>Optimizer node wrapping a simulator.</description>
  <maintainer email="ssmh1@outlook.com">Samuel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
